shaku_derive/tests/ui/no_interface_key.stderr
error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
 --> $DIR/no_interface_key.rs:8:10
  |
8 | #[derive(Component)]
  |          ^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unable to find interface. Please add a '#[shaku(interface = <your trait>)]'
  --> $DIR/no_interface_key.rs:13:10
   |
13 | #[derive(Provider)]
   |          ^^^^^^^^
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
